add gateway server config.

--- a/config/kylin-gateway.yml
+++ b/config/kylin-gateway.yml
@@ -6,7 +6,7 @@ spring:
         - id: kylin-user-service
           uri: lb://kylin-user-service
           predicates:
-            - Path=/${server.servlet.context-path}/business/**
+            - Path=/${server.servlet.context-path}/user/**
           filters:
             - StripPrefix=1
             - name: Hystrix
