--- a/config/kylin-user-service.yml
+++ b/config/kylin-user-service.yml
@@ -25,7 +25,7 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/kylin?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
       username: root
-      password: 123456
+      password: 1234567
       initial-size: 10
       min-idle: 10
       max-active: 1000
