--- a/config/kylin-gateway.yml
+++ b/config/kylin-gateway.yml
@@ -2,6 +2,17 @@ spring:
   cloud:
     gateway:
       routes:
+        #鉴权服务
+        - id: kylin-auth-service
+          uri: lb://kylin-auth-service
+          predicates:
+            - Path=/${server.servlet.context-path}/auth/**
+          filters:
+            - StripPrefix=1
+            - name: Hystrix
+              args:
+                name: kylin-auth-service-hystrix
+                fallbackUri: forward:/fallback/kylin-auth-service
         #用户服务
         - id: kylin-user-service
           uri: lb://kylin-user-service
@@ -18,6 +29,8 @@ spring:
 #Router Hystrix使用线程隔离
 hystrix.command.kylin-user-service-hystrix.execution.isolation.strategy: THREAD
 hystrix.command.kylin-user-service-hystrix.threadPoolKeyOverride: kylin-user-service-tpk
+hystrix.command.kylin-auth-service-hystrix.execution.isolation.strategy: THREAD
+hystrix.command.kylin-auth-service-hystrix.threadPoolKeyOverride: kylin-auth-service-tpk
 
 
 #调整Router Hystrix线程池
@@ -26,7 +39,7 @@ hystrix.threadpool.kylin-user-service-tpk.coreSize: 500
 hystrix.threadpool.kylin-user-service-tpk.maximumSize: 2000
 hystrix.threadpool.kylin-user-service-tpk.allowMaximumSizeToDivergeFromCoreSize: true
 
-#鉴权中心
+#鉴权服务
 hystrix.threadpool.kylin-auth-service.coreSize: 500
 hystrix.threadpool.kylin-auth-service.maximumSize: 2000
 hystrix.threadpool.kylin-auth-service.allowMaximumSizeToDivergeFromCoreSize: true
@@ -49,6 +62,10 @@ feign:
 
 #网关策略
 gateway:
+  white-list:
+    patterns:
+      - /user/login
+      - /user/register
   label-rule:
     forbiddenRules: []
   rate-limit-rule:
