--- a/config/kylin-gateway.yml
+++ b/config/kylin-gateway.yml
@@ -7,16 +7,16 @@ spring:
     gateway:
       routes:
         #IP限流
-        - id: limit_route
-            uri: /cgi/
-            predicates:
-              - After=2019-01-01T00:00:00+08:00[Asia/Shanghai]
-            filters:
-              - name: RequestRateLimiter
-                args:
-                  key-resolver: '#{@hostAddrKeyResolver}'
-                  redis-rate-limiter.replenishRate: 1
-                  redis-rate-limiter.burstCapacity: 3
+#        - id: limit_route
+#            uri: /cgi/
+#            predicates:
+#              - After=2019-01-01T00:00:00+08:00[Asia/Shanghai]
+#            filters:
+#              - name: RequestRateLimiter
+#                args:
+#                  key-resolver: '#{@hostAddrKeyResolver}'
+#                  redis-rate-limiter.replenishRate: 1
+#                  redis-rate-limiter.burstCapacity: 3
         #鉴权服务
         - id: kylin-auth-service
           uri: lb://kylin-auth-service
